ConsultingHub/force-app/main/default/objects/ia_Engagement_Type__c/ia_Engagement_Type__c.object-meta.xml
<CustomObject>
    <description>This object will be used to distinguish different types of engagement</description>
    <label>Engagement Type</label>
    <nameField>
        <label>Engagement Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagement Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>