ConsultingHub/force-app/main/default/objects/ia_Engagement_Type__c/fields/Partner_Role__c.field-meta.xml
<CustomField>
    <fullName>Partner_Role__c</fullName>
    <description>What is the role of the partner?</description>
    <inlineHelpText>What is the role of the partner?</inlineHelpText>
    <label>Partner Role</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>With_Parner__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Handson</fullName>
                <label>Hands-on</label>
            </value>
            <value>
                <fullName>Advisory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>