ConsultingHub/force-app/main/default/objects/ia_Engagement_Type__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Select if this is Net new implementation or enhancement project or lightning migration</description>
    <inlineHelpText>Select if this is Net new implementation or enhancement project or lightning migration</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IA</fullName>
            </value>
            <value>
                <fullName>Jump Start</fullName>
            </value>
            <value>
                <fullName>Lightning Boost</fullName>
            </value>
            <value>
                <fullName>SOW Project</fullName>
            </value>
            <value>
                <fullName>TAM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>