ConsultingHub/force-app/main/default/objects/ia_Engagement_Type__c/fields/With_Parner__c.field-meta.xml
<CustomField>
    <fullName>With_Parner__c</fullName>
    <description>Was Partner Involved</description>
    <inlineHelpText>Was Partner Involved</inlineHelpText>
    <label>Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>