ConsultingHub/force-app/main/default/objects/ia_Engagement_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Domain__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>